openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devfile-gui-wizard
  labels:
    app: devfile-gui-wizard
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: devfile-gui-wizard
